--- a/scss/base/_custom.scss
+++ b/scss/base/_custom.scss
@@ -35,9 +35,12 @@ em {
     border-bottom: 1px solid var(--col-dark);
     text-align: center;
     text-align: -webkit-center;
+    scroll-margin-top: -300px;
+    
 
     @include for-tablet-portrait-up {
         padding: 8rem 3.5rem;
+        scroll-margin-top: -350px;
     }
 }
 
