Changed btn size

--- a/css/main.css
+++ b/css/main.css
@@ -427,7 +427,7 @@ em {
   padding: 0.5rem 1rem;
   font-weight: 700;
   text-transform: uppercase;
-  font-size: 0.875rem;
+  font-size: var(--fs-body);
   line-height: var(--lh-body);
   cursor: pointer;
   transition: background-color 200ms;
@@ -460,7 +460,7 @@ em {
 }
 
 .btn-small {
-  padding: 0.24rem 0.75rem;
+  padding: 0.25rem 0.75rem;
 }
 
 #top-btn {
