--- a/scss/base/_custom.scss
+++ b/scss/base/_custom.scss
@@ -25,6 +25,25 @@ body {
 
 .link { text-decoration: underline; }
 
+.list--check {
+    li {
+        position: relative; 
+        margin-left: 2rem;
+    }
+
+    li::before {
+        position: absolute;
+        left: -1.5rem;
+        content: '\2713';
+        margin-right: 1.5rem;
+        color: var(--col-secondary);
+    }
+}
+
+.list--dot {
+    li::marker { color: var(--col-secondary); }
+}
+
 em {
     color: var(--col-secondary);
     font-style: normal;
