--- a/scss/main.scss
+++ b/scss/main.scss
@@ -111,6 +111,7 @@
         background-color: var(--col-dark);
         color: var(--col-lightest);
         border-radius: $br-s;
+        width: max-content;
         opacity: 0;
         transform: translateY(5px);
         transition: opacity 0.3s, transform 0.5s ease-out;
@@ -123,14 +124,12 @@
     &[data-tooltip="Github"] { color: black; }
 
     &[data-tooltip="User Experience"] {
-        display: inline;
+        width: initial;
+        height: initial;
         text-decoration: underline;
         margin: 0;
 
-        &::after {
-            left: -80%;
-            top: -180%;
-        }
+        &::after { top: -110%; }
     }
 
     &:hover {
