--- a/scss/base/_custom.scss
+++ b/scss/base/_custom.scss
@@ -50,6 +50,7 @@ em {
 }
 
 .section {
+    position: relative;
     padding: 5rem 2rem;
     border-bottom: 1px solid var(--col-dark);
     text-align: center;
