--- a/scss/abstracts/_colors.scss
+++ b/scss/abstracts/_colors.scss
@@ -1,6 +1,7 @@
 :root {
     --col-primary: hsl(21, 99%, 50%);
     --col-primary-darker: hsl(21, 100%, 40%);
+    --col-primary-darkest: hsl(21, 100%, 25%);
 
     --col-secondary: hsl(180, 68%, 41%);
     // --col-secondary-base: hsl(180, 86%, 28%);
