--- a/scss/main.css
+++ b/scss/main.css
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-@import url("https://fonts.googleapis.com/css2?family=Redressed&display=swap");
 *,
 *::before,
 *::after {
@@ -666,10 +665,12 @@ em {
 .about__input:checked ~ .about__checkmark::before {
   opacity: 1;
   transform: translate(-50%, -50%) rotate(-45deg) scale(1);
+  animation: stretch-animate-before 0.5s ease-out;
 }
 .about__input:checked ~ .about__checkmark::after {
   opacity: 1;
   transform: translate(-50%, -50%) rotate(45deg) scale(1);
+  animation: stretch-animate-after 0.5s ease-out;
 }
 
 .about__checkmark {
@@ -679,7 +680,7 @@ em {
   transform: translateX(-50%);
   height: 1.5rem;
   width: 1.5rem;
-  border: 1px solid var(--col-primary);
+  border: 1px solid var(--col-secondary);
   border-radius: 50%;
 }
 .about__checkmark::after, .about__checkmark::before {
@@ -691,7 +692,7 @@ em {
   width: 1rem;
   height: 4px;
   border-radius: 100px;
-  background: var(--col-secondary);
+  background: var(--col-primary);
   transition: all 150ms ease-in;
 }
 .about__checkmark::after {
@@ -701,6 +702,34 @@ em {
   transform: translate(-50%, -50%) rotate(-45deg) scale(0);
 }
 
+@keyframes stretch-animate-after {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg) scale(0, 0);
+  }
+  40% {
+    transform: translate(-50%, -50%) rotate(0deg) scale(1, 1);
+  }
+  80% {
+    transform: translate(-50%, -50%) rotate(70deg) scale(1, 1);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(45deg) scale(1, 1);
+  }
+}
+@keyframes stretch-animate-before {
+  0% {
+    transform: translate(-50%, -50%) rotate(0deg) scale(0, 0);
+  }
+  40% {
+    transform: translate(-50%, -50%) rotate(0deg) scale(1, 1);
+  }
+  80% {
+    transform: translate(-50%, -50%) rotate(-70deg) scale(1, 1);
+  }
+  100% {
+    transform: translate(-50%, -50%) rotate(-45deg) scale(1, 1);
+  }
+}
 .ribbon {
   position: absolute;
   top: -11px;
